[gd_scene load_steps=11 format=3 uid="uid://cyxedgayalsi8"]

[ext_resource type="PackedScene" uid="uid://c2g1xhq21x1mf" path="res://main-menu/background.tscn" id="1_fvidi"]
[ext_resource type="TileSet" uid="uid://ofabqlexnqyd" path="res://assets/tilemap.tres" id="2_ug5nq"]
[ext_resource type="Script" path="res://level/level.gd" id="3_eyv5l"]
[ext_resource type="Texture2D" uid="uid://c6dvqhkaoxfrd" path="res://assets/light.webp" id="4_skj36"]
[ext_resource type="FontFile" uid="uid://btk6lr8r58ga0" path="res://assets/ui/gomarice_mix_bit_font.ttf" id="5_htu6j"]
[ext_resource type="Script" path="res://level/visual_timer.gd" id="6_0ynme"]
[ext_resource type="TileSet" uid="uid://bjrktsba7geda" path="res://assets/border.tres" id="6_b15kj"]
[ext_resource type="Texture2D" uid="uid://byoqcw8nvyldr" path="res://assets/star_locked.png" id="6_ck4m6"]
[ext_resource type="Script" path="res://level/stoppuhr.gd" id="8_q3n6a"]
[ext_resource type="PackedScene" uid="uid://h2dqw4dt0jx3" path="res://assets/ui/settings.tscn" id="9_pech5"]

[node name="shortCutLvl" type="Node2D"]

[node name="Background" parent="." instance=ExtResource("1_fvidi")]

[node name="lvlShortCut" type="TileMap" parent="."]
scale = Vector2(0.6, 0.6)
tile_set = ExtResource("2_ug5nq")
format = 2
layer_0/tile_data = PackedInt32Array(65551, 0, 0, 131087, 0, 0, 196623, 0, 0, 262159, 0, 0, 327695, 0, 0, 393231, 0, 0, 458767, 0, 0, 524303, 0, 0, 589839, 0, 0, 655375, 0, 0, 720911, 0, 0, 786447, 0, 0, 851983, 0, 0, 917519, 0, 0, 983055, 0, 0, 1048591, 0, 0, 1114127, 0, 0, 1179663, 0, 0, 1245199, 0, 0, 1310735, 0, 0, 1376271, 0, 0, 1441807, 0, 0, 1507343, 0, 0, 1572879, 0, 0, 1638415, 0, 0, 1703951, 0, 0, 1769487, 0, 0, 1835023, 0, 0, 1900559, 0, 0, 1966095, 0, 0, 2031631, 0, 0, 65552, 0, 0, 131088, 2, 0, 196624, 0, 0, 262160, 2, 0, 327696, 2, 0, 393232, 2, 0, 458768, 2, 0, 524304, 2, 0, 589840, 2, 0, 655376, 2, 0, 720912, 2, 0, 786448, 2, 0, 851984, 2, 0, 917520, 2, 0, 983056, 2, 0, 1048592, 2, 0, 1114128, 2, 0, 1179664, 2, 0, 1245200, 2, 0, 1310736, 2, 0, 1376272, 2, 0, 1441808, 0, 0, 1507344, 2, 0, 1572880, 2, 0, 1638416, 2, 0, 1703952, 2, 0, 1769488, 2, 0, 1835024, 2, 0, 1900560, 2, 0, 1966096, 2, 0, 2031632, 0, 0, 65553, 0, 0, 131089, 2, 0, 196625, 0, 0, 262161, 2, 0, 327697, 0, 0, 393233, 0, 0, 458769, 0, 0, 524305, 0, 0, 589841, 0, 0, 655377, 0, 0, 720913, 0, 0, 786449, 0, 0, 851985, 0, 0, 917521, 0, 0, 983057, 0, 0, 1048593, 0, 0, 1114129, 0, 0, 1179665, 0, 0, 1245201, 0, 0, 1310737, 2, 0, 1376273, 2, 0, 1441809, 2, 0, 1507345, 2, 0, 1572881, 0, 0, 1638417, 2, 0, 1703953, 2, 0, 1769489, 0, 0, 1835025, 0, 0, 1900561, 0, 0, 1966097, 2, 0, 2031633, 0, 0, 65554, 0, 0, 131090, 2, 0, 196626, 0, 0, 262162, 2, 0, 327698, 2, 0, 393234, 2, 0, 458770, 2, 0, 524306, 2, 0, 589842, 2, 0, 655378, 2, 0, 720914, 2, 0, 786450, 2, 0, 851986, 2, 0, 917522, 2, 0, 983058, 0, 0, 1048594, 2, 0, 1114130, 2, 0, 1179666, 2, 0, 1245202, 2, 0, 1310738, 2, 0, 1376274, 0, 0, 1441810, 0, 0, 1507346, 0, 0, 1572882, 0, 0, 1638418, 2, 0, 1703954, 2, 0, 1769490, 2, 0, 1835026, 2, 0, 1900562, 0, 0, 1966098, 2, 0, 2031634, 0, 0, 65555, 0, 0, 131091, 2, 0, 196627, 0, 0, 262163, 2, 0, 327699, 0, 0, 393235, 2, 0, 458771, 0, 0, 524307, 2, 0, 589843, 0, 0, 655379, 0, 0, 720915, 0, 0, 786451, 0, 0, 851987, 2, 0, 917523, 0, 0, 983059, 0, 0, 1048595, 2, 0, 1114131, 2, 0, 1179667, 2, 0, 1245203, 2, 0, 1310739, 2, 0, 1376275, 2, 0, 1441811, 2, 0, 1507347, 2, 0, 1572883, 0, 0, 1638419, 0, 0, 1703955, 0, 0, 1769491, 0, 0, 1835027, 0, 0, 1900563, 0, 0, 1966099, 0, 0, 2031635, 0, 0, 65556, 0, 0, 131092, 2, 0, 196628, 0, 0, 262164, 2, 0, 327700, 0, 0, 393236, 2, 0, 458772, 0, 0, 524308, 2, 0, 589844, 2, 0, 655380, 2, 0, 720916, 2, 0, 786452, 0, 0, 851988, 2, 0, 917524, 2, 0, 983060, 2, 0, 1048596, 2, 0, 1114132, 0, 0, 1179668, 0, 0, 1245204, 0, 0, 1310740, 2, 0, 1376276, 2, 0, 1441812, 0, 0, 1507348, 2, 0, 1572884, 0, 0, 1703956, 2, 0, 1769492, 2, 0, 1835028, 2, 0, 1900564, 2, 0, 1966100, 2, 0, 2031636, 0, 0, 65557, 0, 0, 131093, 2, 0, 196629, 0, 0, 262165, 2, 0, 327701, 0, 0, 393237, 0, 0, 458773, 0, 0, 524309, 2, 0, 589845, 0, 0, 655381, 0, 0, 720917, 2, 0, 786453, 0, 0, 851989, 0, 0, 917525, 0, 0, 983061, 0, 0, 1048597, 2, 0, 1114133, 2, 0, 1179669, 2, 0, 1245205, 0, 0, 1310741, 2, 0, 1376277, 2, 0, 1441813, 0, 0, 1507349, 2, 0, 1572885, 2, 0, 1638421, 2, 0, 1703957, 2, 0, 1769493, 2, 0, 1835029, 0, 0, 1900565, 0, 0, 1966101, 0, 0, 2031637, 0, 0, 65558, 0, 0, 131094, 2, 0, 196630, 0, 0, 262166, 2, 0, 327702, 0, 0, 393238, 2, 0, 458774, 2, 0, 524310, 2, 0, 589846, 0, 0, 655382, 2, 0, 720918, 2, 0, 786454, 2, 0, 851990, 2, 0, 917526, 2, 0, 983062, 0, 0, 1048598, 2, 0, 1114134, 0, 0, 1179670, 0, 0, 1245206, 0, 0, 1310742, 0, 0, 1376278, 0, 0, 1507350, 0, 0, 1572886, 0, 0, 1638422, 0, 0, 1703958, 0, 0, 1769494, 2, 0, 1835030, 0, 0, 1900566, 2, 0, 1966102, 2, 0, 2031638, 0, 0, 65559, 0, 0, 131095, 2, 0, 196631, 0, 0, 262167, 2, 0, 327703, 0, 0, 393239, 0, 0, 458775, 0, 0, 524311, 0, 0, 589847, 0, 0, 655383, 0, 0, 720919, 0, 0, 786455, 0, 0, 851991, 0, 0, 917527, 0, 0, 983063, 0, 0, 1048599, 2, 0, 1179671, 2, 0, 1245207, 2, 0, 1310743, 2, 0, 1376279, 2, 0, 1507351, 2, 0, 1572887, 0, 0, 1638423, 2, 0, 1703959, 0, 0, 1769495, 0, 0, 1835031, 0, 0, 2031639, 0, 0, 65560, 0, 0, 131096, 2, 0, 196632, 0, 0, 262168, 2, 0, 327704, 2, 0, 393240, 2, 0, 458776, 2, 0, 524312, 2, 0, 589848, 2, 0, 655384, 2, 0, 720920, 2, 0, 786456, 2, 0, 851992, 2, 0, 917528, 2, 0, 983064, 0, 0, 1048600, 0, 0, 1114136, 0, 0, 1179672, 0, 0, 1245208, 0, 0, 1310744, 2, 0, 1376280, 0, 0, 1441816, 0, 0, 1507352, 2, 0, 1572888, 0, 0, 1638424, 2, 0, 1703960, 2, 0, 1769496, 2, 0, 1835032, 2, 0, 1900568, 2, 0, 1966104, 2, 0, 65561, 0, 0, 131097, 2, 0, 196633, 0, 0, 262169, 0, 0, 327705, 0, 0, 393241, 0, 0, 458777, 0, 0, 524313, 2, 0, 589849, 0, 0, 655385, 2, 0, 720921, 0, 0, 786457, 0, 0, 851993, 2, 0, 917529, 2, 0, 983065, 2, 0, 1048601, 2, 0, 1114137, 2, 0, 1179673, 2, 0, 1245209, 0, 0, 1310745, 2, 0, 1376281, 2, 0, 1441817, 0, 0, 1507353, 2, 0, 1572889, 0, 0, 1638425, 0, 0, 1703961, 2, 0, 1769497, 2, 0, 1835033, 0, 0, 1900569, 0, 0, 1966105, 2, 0, 2031641, 0, 0, 65562, 0, 0, 131098, 2, 0, 196634, 2, 0, 262170, 2, 0, 327706, 2, 0, 393242, 2, 0, 458778, 0, 0, 524314, 2, 0, 589850, 0, 0, 655386, 2, 0, 720922, 2, 0, 786458, 0, 0, 851994, 0, 0, 917530, 0, 0, 983066, 0, 0, 1048602, 0, 0, 1114138, 0, 0, 1179674, 2, 0, 1245210, 0, 0, 1310746, 0, 0, 1376282, 2, 0, 1441818, 0, 0, 1507354, 2, 0, 1572890, 2, 0, 1638426, 0, 0, 1703962, 2, 0, 1769498, 2, 0, 1835034, 2, 0, 1900570, 0, 0, 1966106, 2, 0, 2031642, 0, 0, 65563, 0, 0, 131099, 0, 0, 196635, 0, 0, 262171, 0, 0, 327707, 0, 0, 393243, 2, 0, 458779, 0, 0, 524315, 2, 0, 589851, 0, 0, 655387, 0, 0, 720923, 0, 0, 786459, 0, 0, 851995, 2, 0, 917531, 2, 0, 983067, 2, 0, 1048603, 2, 0, 1114139, 2, 0, 1179675, 2, 0, 1245211, 2, 0, 1310747, 0, 0, 1376283, 2, 0, 1441819, 0, 0, 1507355, 2, 0, 1572891, 2, 0, 1638427, 0, 0, 1703963, 0, 0, 1769499, 0, 0, 1835035, 0, 0, 1900571, 0, 0, 1966107, 2, 0, 2031643, 0, 0, 65564, 0, 0, 131100, 2, 0, 196636, 2, 0, 262172, 2, 0, 327708, 0, 0, 393244, 2, 0, 458780, 0, 0, 524316, 2, 0, 589852, 2, 0, 655388, 2, 0, 720924, 2, 0, 786460, 2, 0, 851996, 2, 0, 917532, 0, 0, 983068, 0, 0, 1048604, 2, 0, 1114140, 0, 0, 1179676, 0, 0, 1245212, 0, 0, 1310748, 0, 0, 1376284, 2, 0, 1441820, 0, 0, 1507356, 0, 0, 1572892, 2, 0, 1638428, 2, 0, 1703964, 2, 0, 1769500, 2, 0, 1835036, 2, 0, 1900572, 2, 0, 1966108, 2, 0, 2031644, 0, 0, 65565, 0, 0, 131101, 2, 0, 196637, 0, 0, 262173, 2, 0, 327709, 0, 0, 393245, 2, 0, 458781, 2, 0, 524317, 2, 0, 589853, 0, 0, 655389, 2, 0, 720925, 2, 0, 786461, 0, 0, 851997, 0, 0, 917533, 0, 0, 983069, 2, 0, 1048605, 2, 0, 1114141, 0, 0, 1179677, 2, 0, 1245213, 2, 0, 1310749, 2, 0, 1376285, 2, 0, 1441821, 2, 0, 1507357, 0, 0, 1572893, 2, 0, 1638429, 0, 0, 1703965, 0, 0, 1769501, 0, 0, 1835037, 0, 0, 1900573, 0, 0, 1966109, 0, 0, 2031645, 0, 0, 65566, 0, 0, 131102, 0, 0, 196638, 0, 0, 262174, 2, 0, 327710, 0, 0, 393246, 0, 0, 458782, 0, 0, 524318, 0, 0, 589854, 0, 0, 655390, 0, 0, 720926, 0, 0, 786462, 0, 0, 851998, 2, 0, 917534, 2, 0, 983070, 2, 0, 1048606, 0, 0, 1114142, 0, 0, 1179678, 0, 0, 1310750, 0, 0, 1376286, 0, 0, 1441822, 2, 0, 1507358, 0, 0, 1572894, 2, 0, 1638430, 0, 0, 1703966, 2, 0, 1769502, 2, 0, 1835038, 2, 0, 1900574, 2, 0, 1966110, 2, 0, 2031646, 0, 0, 65567, 0, 0, 131103, 2, 0, 196639, 2, 0, 262175, 2, 0, 327711, 2, 0, 393247, 2, 0, 458783, 2, 0, 524319, 2, 0, 589855, 2, 0, 655391, 2, 0, 720927, 2, 0, 786463, 2, 0, 851999, 2, 0, 917535, 0, 0, 983071, 2, 0, 1048607, 0, 0, 1114143, 2, 0, 1179679, 2, 0, 1310751, 2, 0, 1441823, 2, 0, 1507359, 0, 0, 1572895, 2, 0, 1638431, 0, 0, 1703967, 0, 0, 1769503, 0, 0, 1835039, 2, 0, 1900575, 0, 0, 1966111, 0, 0, 2031647, 0, 0, 65568, 0, 0, 131104, 0, 0, 196640, 0, 0, 262176, 0, 0, 327712, 0, 0, 393248, 0, 0, 458784, 0, 0, 524320, 0, 0, 589856, 0, 0, 655392, 0, 0, 720928, 0, 0, 786464, 2, 0, 852000, 2, 0, 917536, 0, 0, 983072, 2, 0, 1048608, 0, 0, 1114144, 0, 0, 1179680, 0, 0, 1245216, 0, 0, 1310752, 0, 0, 1376288, 0, 0, 1441824, 2, 0, 1507360, 0, 0, 1572896, 2, 0, 1638432, 2, 0, 1703968, 2, 0, 1769504, 0, 0, 1835040, 2, 0, 1900576, 2, 0, 1966112, 2, 0, 2031648, 0, 0, 65569, 0, 0, 131105, 2, 0, 196641, 2, 0, 262177, 2, 0, 327713, 0, 0, 393249, 2, 0, 458785, 2, 0, 524321, 2, 0, 589857, 2, 0, 655393, 2, 0, 720929, 0, 0, 786465, 2, 0, 852001, 0, 0, 917537, 0, 0, 983073, 2, 0, 1048609, 2, 0, 1114145, 2, 0, 1179681, 2, 0, 1245217, 2, 0, 1310753, 2, 0, 1376289, 0, 0, 1441825, 2, 0, 1507361, 0, 0, 1572897, 0, 0, 1638433, 0, 0, 1703969, 2, 0, 1769505, 0, 0, 1835041, 0, 0, 1900577, 0, 0, 1966113, 2, 0, 2031649, 0, 0, 131106, 2, 0, 196642, 0, 0, 262178, 0, 0, 327714, 0, 0, 393250, 2, 0, 458786, 0, 0, 524322, 0, 0, 589858, 0, 0, 655394, 2, 0, 720930, 0, 0, 786466, 0, 0, 852002, 0, 0, 917538, 2, 0, 983074, 2, 0, 1048610, 0, 0, 1114146, 0, 0, 1179682, 0, 0, 1245218, 0, 0, 1310754, 2, 0, 1376290, 0, 0, 1441826, 2, 0, 1507362, 2, 0, 1572898, 2, 0, 1638434, 0, 0, 1703970, 2, 0, 1769506, 0, 0, 1835042, 2, 0, 1900578, 0, 0, 1966114, 2, 0, 2031650, 0, 0, 65571, 0, 0, 131107, 2, 0, 196643, 0, 0, 262179, 2, 0, 327715, 0, 0, 393251, 2, 0, 458787, 0, 0, 524323, 2, 0, 589859, 2, 0, 655395, 2, 0, 720931, 2, 0, 786467, 2, 0, 852003, 2, 0, 917539, 2, 0, 983075, 0, 0, 1048611, 0, 0, 1114147, 2, 0, 1179683, 2, 0, 1245219, 0, 0, 1310755, 2, 0, 1376291, 0, 0, 1441827, 2, 0, 1507363, 0, 0, 1572899, 0, 0, 1638435, 0, 0, 1703971, 2, 0, 1769507, 2, 0, 1835043, 2, 0, 1900579, 0, 0, 1966115, 2, 0, 2031651, 0, 0, 65572, 0, 0, 131108, 2, 0, 196644, 0, 0, 262180, 2, 0, 327716, 0, 0, 393252, 2, 0, 458788, 0, 0, 524324, 2, 0, 589860, 0, 0, 655396, 0, 0, 720932, 0, 0, 786468, 2, 0, 852004, 2, 0, 917540, 2, 0, 1048612, 2, 0, 1114148, 2, 0, 1179684, 0, 0, 1245220, 0, 0, 1310756, 2, 0, 1376292, 0, 0, 1441828, 2, 0, 1507364, 0, 0, 1572900, 2, 0, 1638436, 0, 0, 1703972, 2, 0, 1769508, 0, 0, 1835044, 0, 0, 1900580, 0, 0, 1966116, 2, 0, 2031652, 0, 0, 65573, 0, 0, 131109, 2, 0, 196645, 2, 0, 262181, 2, 0, 327717, 0, 0, 393253, 2, 0, 458789, 0, 0, 524325, 2, 0, 589861, 0, 0, 655397, 2, 0, 720933, 0, 0, 786469, 2, 0, 852005, 0, 0, 917541, 0, 0, 983077, 0, 0, 1048613, 2, 0, 1114149, 2, 0, 1179685, 0, 0, 1245221, 2, 0, 1310757, 2, 0, 1376293, 0, 0, 1441829, 2, 0, 1507365, 0, 0, 1572901, 2, 0, 1638437, 0, 0, 1703973, 2, 0, 1769509, 0, 0, 1835045, 2, 0, 1900581, 2, 0, 1966117, 2, 0, 2031653, 0, 0, 65574, 0, 0, 131110, 2, 0, 393254, 2, 0, 458790, 0, 0, 524326, 2, 0, 589862, 0, 0, 655398, 2, 0, 720934, 0, 0, 786470, 2, 0, 852006, 2, 0, 917542, 2, 0, 983078, 0, 0, 1048614, 2, 0, 1114150, 0, 0, 1179686, 0, 0, 1245222, 2, 0, 1310758, 0, 0, 1441830, 2, 0, 1507366, 0, 0, 1572902, 2, 0, 1638438, 0, 0, 1703974, 2, 0, 1769510, 0, 0, 1835046, 0, 0, 1900582, 0, 0, 1966118, 2, 0, 2031654, 0, 0, 65575, 0, 0, 131111, 2, 0, 196647, 0, 0, 262183, 2, 0, 327719, 0, 0, 393255, 2, 0, 524327, 2, 0, 589863, 0, 0, 655399, 2, 0, 720935, 0, 0, 786471, 0, 0, 852007, 0, 0, 917543, 2, 0, 983079, 0, 0, 1048615, 2, 0, 1114151, 2, 0, 1179687, 2, 0, 1245223, 2, 0, 1310759, 2, 0, 1376295, 2, 0, 1441831, 2, 0, 1507367, 2, 0, 1572903, 2, 0, 1638439, 0, 0, 1703975, 2, 0, 1769511, 2, 0, 1835047, 2, 0, 1900583, 0, 0, 1966119, 2, 0, 2031655, 0, 0, 65576, 0, 0, 131112, 2, 0, 196648, 0, 0, 262184, 2, 0, 327720, 0, 0, 393256, 2, 0, 458792, 0, 0, 655400, 2, 0, 720936, 2, 0, 852008, 0, 0, 917544, 2, 0, 983080, 0, 0, 1048616, 2, 0, 1114152, 0, 0, 1179688, 0, 0, 1245224, 0, 0, 1310760, 0, 0, 1376296, 0, 0, 1441832, 0, 0, 1507368, 0, 0, 1572904, 0, 0, 1638440, 0, 0, 1703976, 0, 0, 1769512, 0, 0, 1835048, 2, 0, 1900584, 0, 0, 1966120, 2, 0, 2031656, 0, 0, 65577, 0, 0, 131113, 2, 0, 196649, 0, 0, 262185, 2, 0, 327721, 2, 0, 393257, 2, 0, 458793, 2, 0, 589865, 0, 0, 655401, 2, 0, 720937, 2, 0, 786473, 0, 0, 852009, 0, 0, 917545, 2, 0, 983081, 0, 0, 1048617, 2, 0, 1114153, 2, 0, 1179689, 2, 0, 1245225, 2, 0, 1310761, 2, 0, 1376297, 2, 0, 1441833, 2, 0, 1507369, 2, 0, 1572905, 2, 0, 1638441, 2, 0, 1703977, 2, 0, 1769513, 0, 0, 1835049, 2, 0, 1900585, 0, 0, 1966121, 2, 0, 2031657, 0, 0, 65578, 0, 0, 131114, 2, 0, 196650, 0, 0, 262186, 0, 0, 327722, 0, 0, 393258, 0, 0, 458794, 0, 0, 524330, 2, 0, 589866, 0, 0, 655402, 0, 0, 720938, 2, 0, 786474, 0, 0, 852010, 2, 0, 917546, 2, 0, 983082, 0, 0, 1048618, 2, 0, 1114154, 0, 0, 1179690, 0, 0, 1245226, 0, 0, 1507370, 0, 0, 1638442, 0, 0, 1769514, 0, 0, 1900586, 0, 0, 1966122, 2, 0, 2031658, 0, 0, 65579, 0, 0, 131115, 2, 0, 196651, 0, 0, 262187, 2, 0, 327723, 2, 0, 393259, 2, 0, 458795, 2, 0, 524331, 2, 0, 589867, 2, 0, 655403, 0, 0, 720939, 2, 0, 786475, 2, 0, 852011, 2, 0, 917547, 2, 0, 1048619, 2, 0, 1114155, 0, 0, 1245227, 0, 0, 1376299, 2, 0, 1441835, 2, 0, 1507371, 0, 0, 1638443, 0, 0, 1900587, 0, 0, 1966123, 2, 0, 2031659, 0, 0, 65580, 0, 0, 131116, 2, 0, 196652, 0, 0, 262188, 0, 0, 327724, 0, 0, 393260, 0, 0, 458796, 0, 0, 524332, 0, 0, 589868, 2, 0, 655404, 0, 0, 720940, 0, 0, 786476, 0, 0, 852012, 0, 0, 983084, 0, 0, 1048620, 0, 0, 1114156, 0, 0, 1245228, 0, 0, 1507372, 0, 0, 1572908, 0, 0, 1900588, 2, 0, 1966124, 2, 0, 2031660, 0, 0, 65581, 0, 0, 131117, 2, 0, 196653, 2, 0, 327725, 2, 0, 393261, 2, 0, 458797, 2, 0, 524333, 2, 0, 589869, 2, 0, 655405, 2, 0, 852013, 0, 0, 983085, 2, 0, 1048621, 2, 0, 1114157, 2, 0, 1179693, 2, 0, 1245229, 2, 0, 1310765, 2, 0, 1376301, 2, 0, 1441837, 2, 0, 1507373, 2, 0, 1572909, 2, 0, 1638445, 0, 0, 1900589, 2, 0, 1966125, 2, 0, 2031661, 0, 0, 65582, 0, 0, 131118, 0, 0, 196654, 0, 0, 262190, 0, 0, 327726, 0, 0, 393262, 0, 0, 458798, 0, 0, 524334, 0, 0, 589870, 0, 0, 655406, 0, 0, 720942, 0, 0, 852014, 0, 0, 917550, 0, 0, 983086, 0, 0, 1048622, 0, 0, 1114158, 0, 0, 1179694, 0, 0, 1245230, 0, 0, 1310766, 0, 0, 1376302, 0, 0, 1441838, 0, 0, 1507374, 0, 0, 1572910, 0, 0, 1638446, 0, 0, 1703982, 0, 0, 1769518, 0, 0, 1835054, 0, 0, 1900590, 0, 0, 1966126, 0, 0, 2031662, 0, 0, 196646, 0, 0, 262182, 0, 0, 327718, 0, 0, 524328, 0, 0, 1376298, 0, 0, 1376294, 0, 0, 458791, 0, 0, 1441834, 0, 0, 983083, 0, 0, 262189, 2, 0, 720941, 2, 0, 1835050, 2, 0, 1835051, 2, 0, 1769515, 2, 0, 1769516, 0, 0, 1769517, 0, 0, 1310764, 0, 0, 786477, 2, 0, 786478, 0, 0, 1638444, 0, 0, 589864, 0, 0, 1835052, 2, 0, 1835053, 2, 0, 1703981, 2, 0, 1703980, 2, 0, 1703979, 2, 0, 1703978, 0, 0, 1572907, 2, 0, 1572906, 2, 0, 1441836, 2, 0, 1376300, 2, 0, 1310763, 2, 0, 1310762, 2, 0, 1179691, 2, 0, 1179692, 2, 0, 917549, 2, 0, 917548, 2, 0, 786472, 2, 0, 524329, 2, 0, 983076, 0, 0, 1900567, 0, 0, 1966103, 2, 0, 2031640, 4, 0, 1441814, 0, 0, 1245214, 0, 0, 1638420, 2, 0, 1441815, 2, 0, 1114135, 2, 0, 1376287, 2, 0, 1245215, 2, 0, 65570, 2, 0)
layer_1/tile_data = PackedInt32Array(65570, 1, 0)
script = ExtResource("3_eyv5l")
id = 11
starPos = Vector2(34, 14)
startPos = Vector2i(34, 1)

[node name="Fog" type="CanvasModulate" parent="."]
visible = false
color = Color(0, 0, 0, 1)

[node name="Light" type="PointLight2D" parent="."]
visible = false
position = Vector2(1108, 66)
scale = Vector2(1.76172, 1.6725)
shadow_enabled = true
texture = ExtResource("4_skj36")

[node name="Belichtet" type="CanvasLayer" parent="."]

[node name="Border" type="TileMap" parent="Belichtet"]
scale = Vector2(0.6, 0.6)
tile_set = ExtResource("6_b15kj")
format = 2
layer_0/tile_data = PackedInt32Array(2031630, 0, 268435456, 1966094, 0, 268435456, 1900558, 0, 268435456, 1835022, 0, 268435456, 1769486, 0, 268435456, 1703950, 0, 268435456, 1638414, 0, 268435456, 1572878, 0, 268435456, 1507342, 0, 268435456, 1441806, 0, 268435456, 1376270, 0, 268435456, 1310734, 0, 268435456, 1245198, 0, 268435456, 1179662, 0, 268435456, 1114126, 0, 268435456, 1048590, 0, 268435456, 983054, 0, 268435456, 917518, 0, 268435456, 851982, 0, 268435456, 786446, 0, 268435456, 720910, 0, 268435456, 655374, 0, 268435456, 589838, 0, 268435456, 524302, 0, 268435456, 458766, 0, 268435456, 393230, 0, 268435456, 327694, 0, 268435456, 262158, 0, 268435456, 196622, 0, 268435456, 131086, 0, 268435456, 65550, 0, 268435456, 15, 0, 1879048192, 16, 0, 1879048192, 17, 0, 1879048192, 18, 0, 1879048192, 19, 0, 1879048192, 20, 0, 1879048192, 21, 0, 1879048192, 22, 0, 1879048192, 23, 0, 1879048192, 24, 0, 1879048192, 25, 0, 1879048192, 26, 0, 1879048192, 27, 0, 1879048192, 28, 0, 1879048192, 29, 0, 1879048192, 30, 0, 1879048192, 31, 0, 1879048192, 32, 0, 1879048192, 33, 0, 1879048192, 35, 0, 1879048192, 36, 0, 1879048192, 37, 0, 1879048192, 38, 0, 1879048192, 39, 0, 1879048192, 40, 0, 1879048192, 41, 0, 1879048192, 42, 0, 1879048192, 43, 0, 1879048192, 44, 0, 1879048192, 45, 0, 1879048192, 46, 0, 1879048192, 65583, 0, 536870912, 131119, 0, 536870912, 196655, 0, 536870912, 262191, 0, 536870912, 327727, 0, 536870912, 393263, 0, 536870912, 458799, 0, 536870912, 524335, 0, 536870912, 589871, 0, 536870912, 655407, 0, 536870912, 720943, 0, 536870912, 786479, 0, 536870912, 852015, 0, 536870912, 917551, 0, 536870912, 983087, 0, 536870912, 1048623, 0, 536870912, 1114159, 0, 536870912, 1179695, 0, 536870912, 1245231, 0, 536870912, 1310767, 0, 536870912, 1376303, 0, 536870912, 1441839, 0, 536870912, 1507375, 0, 536870912, 1572911, 0, 536870912, 1638447, 0, 536870912, 1703983, 0, 536870912, 1769519, 0, 536870912, 1835055, 0, 536870912, 1900591, 0, 536870912, 1966127, 0, 536870912, 2031663, 0, 536870912, 2097167, 0, 1073741824, 2097168, 0, 1073741824, 2097169, 0, 1073741824, 2097170, 0, 1073741824, 2097171, 0, 1073741824, 2097172, 0, 1073741824, 2097173, 0, 1073741824, 2097174, 0, 1073741824, 2097175, 0, 1073741824, 2097177, 0, 1073741824, 2097178, 0, 1073741824, 2097179, 0, 1073741824, 2097180, 0, 1073741824, 2097181, 0, 1073741824, 2097182, 0, 1073741824, 2097183, 0, 1073741824, 2097184, 0, 1073741824, 2097185, 0, 1073741824, 2097186, 0, 1073741824, 2097187, 0, 1073741824, 2097188, 0, 1073741824, 2097189, 0, 1073741824, 2097190, 0, 1073741824, 2097191, 0, 1073741824, 2097192, 0, 1073741824, 2097193, 0, 1073741824, 2097194, 0, 1073741824, 2097195, 0, 1073741824, 2097196, 0, 1073741824, 2097197, 0, 1073741824, 2097198, 0, 1073741824)

[node name="Star" type="Sprite2D" parent="Belichtet"]
position = Vector2(1004, 546)
scale = Vector2(4.5, 4.5)
texture = ExtResource("6_ck4m6")

[node name="light_out" type="Label" parent="Belichtet"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 320.0
offset_top = 266.0
offset_right = 872.0
offset_bottom = 347.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("5_htu6j")
theme_override_font_sizes/font_size = 80
text = "Lights out!"

[node name="light_out_in" type="Label" parent="Belichtet"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 930.0
offset_top = 206.0
offset_right = -22.0
offset_bottom = -417.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("5_htu6j")
theme_override_font_sizes/font_size = 24
text = "Lights out in :"

[node name="gebrauchte_zeit" type="Label" parent="Belichtet"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 914.0
offset_top = 35.0
offset_right = 199.0
offset_bottom = -562.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("5_htu6j")
theme_override_font_sizes/font_size = 50
text = "required Time:"

[node name="stoppuhr" type="Node" parent="Belichtet"]
script = ExtResource("8_q3n6a")

[node name="label" type="Label" parent="Belichtet/stoppuhr"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 965.0
offset_top = 65.0
offset_right = -56.0
offset_bottom = -541.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("5_htu6j")
theme_override_font_sizes/font_size = 41
text = "00:00"

[node name="Highscore" type="Label" parent="Belichtet"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 921.0
offset_top = 121.0
offset_right = 206.0
offset_bottom = -476.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("5_htu6j")
theme_override_font_sizes/font_size = 50
text = "    Highscore"

[node name="HighScoreTime" type="Label" parent="Belichtet"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 965.0
offset_top = 144.0
offset_right = -53.0
offset_bottom = -459.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("5_htu6j")
theme_override_font_sizes/font_size = 41
text = "00:00"

[node name="Settings" parent="Belichtet" instance=ExtResource("9_pech5")]
visible = false
offset_left = 364.0
offset_top = 59.0
offset_right = -574.0
offset_bottom = -326.0
scale = Vector2(2, 2)

[node name="visual_timer" type="Node" parent="."]
script = ExtResource("6_0ynme")

[node name="Timer" type="Timer" parent="visual_timer"]
wait_time = 10.0
one_shot = true
autostart = true

[node name="time" type="Label" parent="visual_timer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 965.0
offset_top = 235.0
offset_right = -56.0
offset_bottom = -371.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("5_htu6j")
theme_override_font_sizes/font_size = 41
text = "00:00"

[connection signal="timeout" from="visual_timer/Timer" to="lvlShortCut" method="_on_timer_timeout"]
